fixing video on mobile

--- a/postcard-core/styles/postcard.sass
+++ b/postcard-core/styles/postcard.sass
@@ -122,12 +122,9 @@ ul.postcard-feed
   div.media-container
     position: relative
     //+single-box-shadow($medium-grey, 0, 0, 2px, 1px)
-    margin-top: 10/$em
-    margin-left: 64/$em
+    margin: 10/$em auto 0
     clear: both
-    //padding: 5/$em
-    @media all and (max-width: 480px)
-      margin-left: 0
+
 
   div.image-container, div.video-container
     position: absolute
